2005-10-28  Sebastien Pouliot  <sebastien@ximian.com> 

	* IdentityReferenceCollection.cs: Removed virtual from Count and 
	IsReadOnly properties.
	* WindowsIdentity.cs: AuthenticationType property isn't virtual in 2.0

2005-09-25  Sebastien Pouliot  <sebastien@ximian.com>

	* SecurityIdentifier.cs: Stubbed ctor(IntPtr) introduced in 2.0 RC.

2005-08-22  Sebastien Pouliot  <sebastien@ximian.com>

	* GenericPrincipal.cs: Roles are case-insensitive.

2005-06-18  Sebastien Pouliot  <sebastien@ximian.com>

	* IdentityReference.cs: Constructor is internal (which means it the
	class cannot be inherited outside corlib).

2005-06-17  Sebastien Pouliot  <sebastien@ximian.com>

	* IdentityNotMappedException.cs: New (2.0). Identity exception.
	* IdentityReference.cs: New (2.0). Abstract base class to collect /
	translate identities.
	* IdentityReferenceCollection.cs: New. (2.0) Collection of 
	IdentityReference (e.g. groups).
	* NTAccount.cs: New (2.0). Domain/User (string based) 
	IdentityReference.
	* SecurityIdentifier.cs: New (2.0). SID (binary based) 
	IdentityReference.
	* TokenAccessLevels.cs: New (2.0). Type of identity token.
	* TokenImpersonationLevel.cs: Fixed name in header.
	* WellKnownSidType.cs: New (2.0). Enum of all well known SID.
	* WindowsIdentity.cs: Implement IDisposable for 2.0. Add Identity
	Reference support for User, Owner and a collection for groups.
	* WindowsImpersonationContext.cs: Implement IDisposable for 2.0.
	* WindowsPrincipal.cs: Added IsInRole(SecurityIdentifier) for 2.0.

2005-04-22  Sebastien Pouliot  <sebastien@ximian.com>

	* GenericIdentity.cs: Added [ComVisible(true)] for NET_2_0.
	* GenericPrincipal.cs: Added [ComVisible(true)] for NET_2_0.
	* IIdentity.cs: Added [ComVisible(true)] for NET_2_0.
	* IPrincipal.cs: Added [ComVisible(true)] for NET_2_0.
	* PrincipalPolicy.cs: Added [ComVisible(true)] for NET_2_0.
	* TokenImpersonationLevel.cs: Added [ComVisible(true)] for NET_2_0.